# bot_discord_lastwar

./: .env  .gitignore  =2.35.0  Dockerfile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: add_files_gemini.py  process_full.py  remove_files_gemini.py  web_scraping_files_web.py  youtube_resume.py
docs/: help_last_war.txt  index.md
docs/quick-start/: first-use.md
src/: bot_translater.py  gemini_utils.py  main.py  scraper.py  utils.py  youtube_utils.py
tests/: tests_bot.py
